# ogc-rs

./: '  .gitignore  Cargo.toml  LICENSE  README.md  bindgen.bat  bindgen.sh  build.rs  log  powerpc-unknown-eabi.json  rustfmt.toml  wrapper.h
.cargo/: config.toml
.forgejo/workflows/: workflow.yml
.github/workflows/: rust.yml  workflow.yml
examples/colored-tri/: Cargo.toml
examples/colored-tri/src/: main.rs
examples/embedded-graphics-wii/: Cargo.toml  README.md  build.rs  powerpc-unknown-eabi.json
examples/embedded-graphics-wii/src/: display.rs  main.rs
examples/ios/: Cargo.toml
examples/ios/embedded-sdmmc/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
examples/ios/embedded-sdmmc/src/: volume_mgr.rs
examples/ios/embedded-sdmmc/src/fat/: volume.rs
examples/ios/src/: main.rs
examples/obj-loading/: Cargo.toml
examples/obj-loading/src/: main.rs  obj.rs
examples/obj-loading/src/assets/: untitled.mtl
examples/template/: Cargo.toml  README.md  build.rs  powerpc-unknown-eabi.json
examples/template/src/: main.rs
examples/texture-tri/: Cargo.toml
examples/texture-tri/src/: main.rs
ogc-rs/: Cargo.toml  README.md
ogc-rs/src/: asnd.rs  audio.rs  console.rs  constants.rs  debug.rs  error.rs  gu.rs  gx.rs  gx_const.rs  lib.rs  main.rs  network.rs  pad.rs  runtime.rs  system.rs  tpl.rs  utils.rs  video.rs  wpad.rs
ogc-sys/: Cargo.toml  README.md  bindgen.sh  build.rs  wrapper.h
ogc-sys/src/: inline.rs  lib.rs  ogc.rs
ogc2-sys/: Cargo.toml  README.md  build.rs
ogc2-sys/src/: ogc.rs
src/: aesnd.rs  arch.rs  asnd.rs  audio.rs  cache.rs  console.rs  debug.rs  error.rs  glam_impl.rs  gu.rs  gx.rs  input.rs  ios.rs  lib.rs  lwp.rs  main.rs  message.rs  mp3player.rs  mutex.rs  network.rs  ogc.rs  pad.rs  runtime.rs  system.rs  time.rs  tpl.rs  utils.rs  video.rs
src/gx/: mod.rs  regs.rs  types.rs
src/input/: controller.rs  mod.rs  pad.rs  wpad.rs
src/ios/: dolphin.rs  es.rs  fs.rs  sdio.rs
src/mmio/: command_processor.rs  cp.rs  di.rs  dsp.rs  mi.rs  mod.rs  pe.rs  pi.rs  processor_interface.rs  serial_interface.rs  vi.rs
src/sync/: mod.rs
