[package]
name = "ogc-rs"
version = "0.1.0"
authors = ["rust-wii"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A Rust wrapper library for devkitPro's libogc"
documentation = "https://docs.rs/ogc-rs/"
homepage = "https://github.com/rust-wii/ogc-rs"
repository = "https://github.com/rust-wii/ogc-rs"
keywords = ["wii", "embedded", "no-std"]

[lib]
crate-type = ["rlib"]

[features]
ffi = []

[dependencies]
bitflags = "1.3"
num_enum = { version = "0.5", default-features = false }
cfg-if = "1.0"
cstr_core = "0.2"

libm = "0.2"
libc = "0.2"
ogc-sys = "0.1.0"
glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
voladdress = "0.4"
bit_field = "0.10.1"
#lock_api = "0.4.5"
