[package]
name = "ogc-rs"
version = "0.1.1"
authors = ["rust-wii"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A Rust wrapper library for devkitPro's libogc"
documentation = "https://docs.rs/ogc-rs/"
homepage = "https://github.com/rust-wii/ogc-rs"
repository = "https://github.com/rust-wii/ogc-rs"
keywords = ["wii", "embedded", "no-std"]

[lib]
crate-type = ["rlib"]


[features]
default = ["default_alloc_handler", "default_panic_handler"]
ffi = []
mmio = []
glam_compat = ["glam"]
default_alloc_handler = []
default_panic_handler = []

[dependencies]
bitflags = "1.3"
num_enum = { version = "0.5", default-features = false }
cfg-if = "1.0"
libm = "0.2"
libc = "0.2"
ogc-sys =  { path = "./ogc-sys/"}
glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
voladdress = "1.2.2"
bit_field = "0.10.1"
