[package]
name = "ogc-rs"
version = "0.6.0"
authors = ["rust-wii"]
edition = "2018"

[lib]
crate-type = ["rlib"]
name = "ogc"

[dependencies]
bitflags = "1.1"

[dependencies.enum_primitive]
version = "0.1"
git = "https://github.com/FrictionlessPortals/enum_primitive-rs.git"

[dependencies.ogc-sys]
path = "../ogc-sys"

