[package]
name = "ogc-rs"
version = "0.7.1"
authors = ["rust-wii"]
edition = "2018"

[lib]
crate-type = ["rlib"]
name = "ogc"

[dependencies]
bitflags = "1.2"
libc = "0.2.94"

[dependencies.enum_primitive]
version = "0.1"
git = "https://github.com/FrictionlessPortals/enum_primitive-rs.git"

[dependencies.ogc-sys]
path = "../ogc-sys"

