[package]
name = "ogc-rs"
version = "0.7.1"
authors = ["rust-wii"]
edition = "2018"

[lib]
crate-type = ["rlib"]
name = "ogc"

[dependencies]
bitflags = "1.2"

[dependencies.num_enum]
version = "0.5"
default-features = false

[dependencies.ogc-sys]
path = "../ogc-sys"

[features]
ffi = []
wpad = []
